bk_ida/gccida/g1/count_error
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/count_error/src/diagnostic.c:1407:6: error: use of undeclared identifier 'warning_message_3'
if ( warning_message_3 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/count_error/src/diagnostic.c:1410:1: error: use of undeclared identifier 'warning_message_3'
warning_message_3 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/count_error/src/obj/diagnostic.o] Error 1
